--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,14 @@ buildscript {
         kotlinVersion = '1.2.0'
 
         // Test
+        assertJVersion = '2.8.0'
         spekVersion = '1.1.5'
 
         /////////////////////////////////////////////////////
         // Plugins
 
         kotlinPlugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        jUnitPlugin = "org.junit.platform:junit-platform-gradle-plugin:1.0.0"
 
         /////////////////////////////////////////////////////
         // Dependencies
@@ -23,6 +25,7 @@ buildscript {
         kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
         // Test
+        assertJ = "org.assertj:assertj-core:$assertJVersion"
         spekApi = "org.jetbrains.spek:spek-api:$spekVersion"
         spekJUnitPlatformEngine = "org.jetbrains.spek:spek-junit-platform-engine:$spekVersion"
     }
