--- a/remotedata/build.gradle
+++ b/remotedata/build.gradle
@@ -2,16 +2,27 @@ buildscript {
 
     dependencies {
         classpath kotlinPlugin
+        classpath jUnitPlugin
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'org.junit.platform.gradle.plugin'
+
+junitPlatform {
+    filters {
+        engines {
+            include 'spek'
+        }
+    }
+}
 
 dependencies {
 
     compile kotlinStdLib
 
     // Test
+    testCompile assertJ
     testCompile spekApi
     testCompile spekJUnitPlatformEngine
 }
