--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         // Versions
 
         // Libraries
+        dokkaVersion = '0.9.15'
         kotlinVersion = '1.2.0'
 
         // Test
@@ -17,6 +18,7 @@ buildscript {
 
         kotlinPlugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         jUnitPlugin = "org.junit.platform:junit-platform-gradle-plugin:1.0.0"
+        dokkaPlugin = "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion"
 
         /////////////////////////////////////////////////////
         // Dependencies
