--- a/remotedata/build.gradle
+++ b/remotedata/build.gradle
@@ -3,11 +3,13 @@ buildscript {
     dependencies {
         classpath kotlinPlugin
         classpath jUnitPlugin
+        classpath dokkaPlugin
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
+apply plugin: 'org.jetbrains.dokka'
 
 junitPlatform {
     filters {
@@ -15,6 +17,11 @@ junitPlatform {
             include 'spek'
         }
     }
+}
+
+dokka {
+    outputFormat = 'html'
+    outputDirectory = "$buildDir/javadoc"
 }
 
 dependencies {
