update kotlin version specification

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
 
+    ext.kotlin_version = '1.2.10'
+
     ext {
 
         /////////////////////////////////////////////////////
@@ -8,7 +10,6 @@ buildscript {
         // Libraries
         bintrayPluginVersion = '1.7.3'
         dokkaVersion = '0.9.15'
-        kotlinVersion = '1.2.0'
         mavenPluginVersion = '1.4.1'
 
         // Test
@@ -22,14 +23,14 @@ buildscript {
         bintrayPlugin = "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintrayPluginVersion"
         dokkaPlugin = "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion"
         jUnitPlugin = "org.junit.platform:junit-platform-gradle-plugin:$jUnitPluginVersion"
-        kotlinPlugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        kotlinPlugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         mavenPlugin = "com.github.dcendents:android-maven-gradle-plugin:$mavenPluginVersion"
 
         /////////////////////////////////////////////////////
         // Dependencies
 
         // Libraries
-        kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+        kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
         // Test
         assertJ = "org.assertj:assertj-core:$assertJVersion"
