--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,18 @@
+import dependencies.Plugins
+
 buildscript {
 
-    ext.kotlin_version = '1.3.72'
+    repositories {
+        jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
 
-    ext {
-
-        /////////////////////////////////////////////////////
-        // Versions
-
-        // Libraries
-        bintrayPluginVersion = '1.7.3'
-        dokkaVersion = '0.9.15'
-        mavenPluginVersion = '1.4.1'
-
-        // Test
-        assertJVersion = '2.8.0'
-        jUnitPluginVersion = '1.0.0'
-        spekVersion = '1.1.5'
-
-        /////////////////////////////////////////////////////
-        // Plugins
-
-        bintrayPlugin = "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintrayPluginVersion"
-        dokkaPlugin = "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion"
-        jUnitPlugin = "org.junit.platform:junit-platform-gradle-plugin:$jUnitPluginVersion"
-        kotlinPlugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        mavenPlugin = "com.github.dcendents:android-maven-gradle-plugin:$mavenPluginVersion"
-
-        /////////////////////////////////////////////////////
-        // Dependencies
-
-        // Libraries
-        kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-        // Test
-        assertJ = "org.assertj:assertj-core:$assertJVersion"
-        spekApi = "org.jetbrains.spek:spek-api:$spekVersion"
-        spekJUnitPlatformEngine = "org.jetbrains.spek:spek-junit-platform-engine:$spekVersion"
+    dependencies {
+        classpath Plugins.bintray
+        classpath Plugins.dokka
+        classpath Plugins.junit
+        classpath Plugins.kotlin
+        classpath Plugins.maven
     }
 }
 
