--- a/remotedata/build.gradle
+++ b/remotedata/build.gradle
@@ -1,32 +1,27 @@
 import dependencies.Deps
 
 apply plugin: 'kotlin'
-apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
-
-junitPlatform {
-    filters {
-        engines {
-            include 'spek'
-        }
-    }
-}
 
 dokka {
     outputFormat = 'html'
     outputDirectory = "$buildDir/javadoc"
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
 
     compile Deps.kotlin
 
-    // Test
-    testCompile Deps.assertJ
-    testCompile Deps.Spek.api
-    testCompile Deps.Spek.engine
+    testCompile Deps.Kotest.assertions
+    testCompile Deps.Kotest.console
+    testCompile Deps.Kotest.property
+    testCompile Deps.Kotest.runner
 }
 
 ext {
