--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath Plugins.dokka
         classpath Plugins.kotlin
         classpath Plugins.maven
+        classpath Plugins.versions
     }
 }
 
