--- a/remotedata-coroutines/gradle.properties
+++ b/remotedata-coroutines/gradle.properties
@@ -1,3 +1,4 @@
 GROUP=com.github.torresmi.remotedata
 POM_ARTIFACT_ID=remotedata-coroutines
+POM_NAME=RemoteData Coroutines
 POM_DESCRIPTION=Coroutine support for RemoteData.
