--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,9 @@ POM_DEVELOPER_URL=https://github.com/torresmi/
 
 # Increase timeout when pushing to Sonatype (otherwise we get timeouts)s
 systemProp.org.gradle.internal.http.socketTimeout=120000
+
+org.gradle.jvmargs=-Xmx4g -XX:+UseParallelGC
+org.gradle.parallel=true
+org.gradle.unsafe.configuration-cache=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
