--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,16 @@ kotest = "5.4.1"
 
 kotlin = "1.6.21"
 
+[plugins]
+
+dokka = "org.jetbrains.dokka:1.4.20"
+
+kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+
+kotlin-js = { id = "org.jetbrains.kotlin.js", version.ref = "kotlin" }
+
+maven = "com.vanniktech.maven.publish:0.13.0"
+
 [libraries]
 
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
